--- a/blogs.html
+++ b/blogs.html
@@ -38,7 +38,33 @@
 						<section class="wrapper style5">
 							<div class="inner">
 
-								<div style="text-align:center;"><a href="#blogjannes"><b>Jannes / </b></a><a href="#blogkoen"><b>Koen / </b></a><a href="#blogbrian"><b>Brian / </b></a><a href="#blogyury"><b>Yury / </b></a><a href="#blogbas"><b>Bas</b></a></div>
+								<div>
+									<img src="images/jannesfoto.jpg" alt="" width=202 height=202 usemap="#blogjannes"/>
+									<img src="images/koenfoto.jpg" alt="" width=202 height=202 usemap="#blogkoen"/>
+									<img src="images/brianfoto.jpg" alt="" width=202 height=202 usemap="#blogbrian"/>
+									<img src="images/yuryfoto.jpg" alt="" width=202 height=202 usemap="#blogyury"/>
+									<img src="images/basfoto.jpg" alt="" width=202 height=202 usemap="#blogbas"/>
+								</div>
+
+								<map name="blogjannes">
+									<area shape="rect" coords="00,00,270,350" alt="Jannes" href="#blogjannes">
+								</map>
+								
+								<map name="blogkoen">
+									<area shape="rect" coords="00,00,270,350" alt="Jannes" href="#blogkoen">
+								</map>
+
+								<map name="blogyury">
+									<area shape="rect" coords="00,00,270,350" alt="Jannes" href="#blogyury">
+								</map>
+
+								<map name="blogbrian">
+									<area shape="rect" coords="00,00,270,350" alt="Jannes" href="#blogbrian">
+								</map>
+
+								<map name="blogbas">
+									<area shape="rect" coords="00,00,270,350" alt="Jannes" href="#blogbas">
+								</map>
 
 							<hr id="blogjannes"/>
 
@@ -342,6 +368,37 @@
 									van nieuwe technologieën, waardoor ons gedrag wordt beïnvloed. Als ontwerper moet je hiermee 
 									rekening houden en met de tijd mee gaan. Want wie weet, misschien moet er binnenkort een manier 
 									worden ontwikkeld om je auto te bedienen door middel van hersensignalen.
+								</p>
+
+								<h4>• Week 7 (24-10-2021)</h4>
+								<p>
+									Game industrie is momenteel een van de snelst groeiende sectoren ter wereld. Met miljarden 
+									dollars aan investeringen wereldwijd en miljoenen mensen betrokken voor het creëren 
+									van nieuwe content.
+								</p>
+
+								<p>
+									Ook design is betrokken bij het proces van game development, zo’n proces heet Game 
+									Design. Gamedesigners nemen de creatieve leiding bij het bedenken en tot leven brengen 
+									van videogame verhalen, personages, gameplay, regels, interfaces, dialogen en omgevingen.
+								</p>
+
+								<p>
+									Zoals te verwachten, kan een game niet tot leven worden gebracht zonder geschreven code, 
+									die op basis van ontworpen concept geïmplementeerd wordt. Het is echter makkelijker 
+									gezegd dan gedaan, want achter zo’n proces vinden veel verschillende fases plaats. Het 
+									doordenken van het concept, scenario, gameplay en verhaal is de eerste fase. Daarna 
+									\begint productiefase waarin game content wordt ontworpen met alle personages, locaties, 
+									wereld en interfaces. Uiteindelijk komen we bij development fase waarin de game daadwerkelijk 
+									gebouwd wordt met alle mechanics, data, interactie en processen die binnen de game gebeuren.
+								</p>
+
+								<p>
+									ICT speelt een grote rol met name in het ontwikkelen van mechanics en interactieve 
+									processen binnen de game. In de laatste jaren worden deze steeds op een hogere nieveau 
+									gebracht, waardoor game designer in staat zijn om game beleving veel boeiender en 
+									veelzijdiger te maken. Denk eens aan gesprekken met virtuele personages in een hele 
+									realistische wereld waarmee op duizenden manieren interageren.
 								</p>
 
 								<p>- Yury -</p>
