--- a/blogs.html
+++ b/blogs.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>IICT Site Groep 2</title>
+		<title>ICTea</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -21,9 +21,6 @@
 										<ul>
 											<li><a href="index.html">Home</a></li>
 											<li><a href="blogs.html">Blogs</a></li>
-											<li><a href="#">Elements(x)</a></li>
-											<li><a href="#">Sign Up(x)</a></li>
-											<li><a href="#">Log In(x)</a></li>
 										</ul>
 									</div>
 								</li>
@@ -136,7 +133,15 @@
 
 								<h4>• Week 7 (24-10-2021)</h4>
 								<p>
-									VAKANTIE!!!
+									Ten eerste, heerlijke vakantie gehad. Lekker gerelaxt, beetje bijgekomen van alle stres van school en werk en ik denk bijna een
+									hele week alleen maar series gekeken, ik wist niet dat sommige netflix originals zo goed waren. Verder heb ik een beetje 
+									gewerkt aan mijn project scooter, een gezellig uitstapje gemaakt naar Amsterdam en de nieuwe James Bond film gekeken in de Pathé, 
+									zeker een aanrader.
+								</p>
+
+								<p>
+									Natuurlijk heb ik ook nog wat gedaan aan mijn eindverslag van blok A over de verkenning van de rol van ICT binnen de 
+									scheikundige sector. Ik 
 								</p>
 
 								<h4>• Week 8 (31-10-2021)</h4>
@@ -161,7 +166,7 @@
 								<p>
 									Welkom op mijn wekelijkse blog. In dit blog ga ik jullie meenemen in de ICT wereld, ik hou jullie 
 									up-to-date over de voortgang van het project “Verkenning van de rol van ICT in het beroepenveld” van 
-									de minor ICT voor niet ICTers op de Hogeschool Utrecht. 
+									de minor ICT voor niet ICT'ers op de Hogeschool Utrecht. 
 								</p>
 
 								<p>
