--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>ICT Site Groep 2</title>
+		<title>ICTea</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -21,9 +21,6 @@
 										<ul>
 											<li><a href="index.html">Home</a></li>
 											<li><a href="blogs.html">Blogs</a></li>
-											<li><a href="#">Elements(x)</a></li>
-											<li><a href="#">Sign Up(x)</a></li>
-											<li><a href="#">Log In(x)</a></li>
 										</ul>
 									</div>
 								</li>
