--- a/blogs.html
+++ b/blogs.html
@@ -141,11 +141,15 @@
 
 								<p>
 									Natuurlijk heb ik ook nog wat gedaan aan mijn eindverslag van blok A over de verkenning van de rol van ICT binnen de 
-									scheikundige sector. Ik 
+									scheikundige sector. Ik ben bezig geweest met een stuk over Organische chemie, Analytische chemie en scheikundig 
+									onderwijs, wat ik ga in mijn verslag voornamelijk in op innovaties binnen de specifieke vakgebieden. Daarnaast wil 
+									ik nog wat gaan typen over hoe ik de toekomst van de ICT binnen de scheikundige sector zie en misschien nog wat over het begin 
+									of hoe bepaalde experimenten werden gedaan zonder de toepassing van ICT.
 								</p>
 
 								<h4>• Week 8 (31-10-2021)</h4>
 								<p>
+
 								</p>
 
 								<h4>• Week 9 (07-11-2021)</h4>
@@ -223,7 +227,6 @@
 								</p>
 
 								<h4>• Week 6 (17-10-2021)</h4>
-
 								<p>
 									Week 6
 								</p>
@@ -256,6 +259,18 @@
 								<p>
 									Ik ben deze week bezig geweest met het begin van mijn onderzoeksverslag. Ik ben 
 									op dit moment bezig met het oriënteren en verkennen van mijn vakgebied op het gebied van ICT.
+								</p>
+
+								<h4>• Week 7 (24-10-2021)</h4>
+								<p>
+									VAKANTIE!!!!
+								</p>
+
+								<h4>• Week 8 (31-10-2021)</h4>
+								<p>
+									Ik ben deze week verdergegaan met het schrijven van mijn onderzoeksverslag. 
+									Ik ben mij aan het verdiepen in fleet management & ship management programma’s, 
+									hoe dit vroeger werd gedaan en de toekomst hiervan.
 								</p>
 
 								<p>- Koen -</p>
@@ -414,11 +429,11 @@
 
 					<footer id="footer">
 						<ul class="icons">
-							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-							<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+							<li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+							<li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+							<li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
+							<li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 						<ul class="copyright">
 							<li>&copy; Untitled</li><li>Design: Jannes</li>
