--- a/index.html
+++ b/index.html
@@ -102,10 +102,12 @@
 					<footer id="footer">
 						<ul class="icons">
 							<li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-							<li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+							<li><a href="https://www.youtube.com/watch?v=gt_SQpMm8DI" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+							<li><a href="https://www.youtube.com/watch?v=MRPeXLbU7LU" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+							<li><a href="https://www.youtube.com/watch?v=XnXH9zqp5XE" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
+							<li><a href="https://www.youtube.com/watch?v=BzO24XPLhdw" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+							<li><a href="https://www.youtube.com/watch?v=Mw-0Fn2cWqY" class="icon brands fa-youtube"><span class="label">Youtube</span></a></li>
+							<li><a href="https://www.youtube.com/watch?v=a14Y2V5zJlY" class="icon brands fa-spotify"><span class="label">Spotify</span></a></li>
 						</ul>
 						<ul class="copyright">
 							<li>&copy; Untitled</li><li>Design: Jannes</li>
