--- a/blogs.html
+++ b/blogs.html
@@ -149,15 +149,30 @@
 
 								<h4>• Week 8 (31-10-2021)</h4>
 								<p>
-
+									Deze week niet heel veel bezig geweest met het verslag, ik was er namelijk van onder de indruk dat ik het al grotendeels af had,
+									maar dat was niet helemaal zo. Ik heb namelijk nu pas 3 pagina's en ik moet er zeker 5, dus wat we gaan doen ik nog een stukje 
+									schrijven over de toekomst van de ICT branche in de scheikundige sector. Verder heb ik mijn bronnen nog een beetje aangepast en
+									de algemene opmaak van de site en mijn verslag verbeterd.
 								</p>
 
 								<h4>• Week 9 (07-11-2021)</h4>
 								<p>
+									Week negen alweer, bijna het einde van het blok, het scheit al lekker op. Deze week heb ik eigenlijk vorige week al afgemaakt en heb
+									nu ook eindelijk 5 pagina's. Deze week een 2 gast college's gehad over Robotica en Blockchain. De les over blockchain vond ik erg tegenvallen,
+									het was namelijk een beetje een waardeloze uitleg, no offence, en iets te oudbollig, als een jong iemand in blockchain technologie, trok het 
+									mij minder aan. Robotica daarin tegen was echt top, goeie en duidelijk les, en heel veel van opgestoken.
+								</p>
+
+								<p>
+									Ik heb naast het verslag en de gastcollege's ook nog een beetje gewerkt aan de toets, ik vind het programmeer gedeelte en SNE sowieso 
+									het makkelijkst. Aangezien ik de lessen van deze 2 onderdelen ook erg goed vond, ik weet alleen nog steeds niet wat ik nou moet leren 
+									voor de lessen van Walter en Rob. Aangezien dit nogal onduidelijk was uit de lessen, maar we gaan er het beste van maken, nog een beetje 
+									samenvatten en het moet wel goed komen.
 								</p>
 
 								<h4>• Week 10 (14-11-2021)</h4>
 								<p>
+								
 								</p>
 
 								<p>- Jannes -</p>
@@ -515,7 +530,7 @@
 									die op basis van ontworpen concept geïmplementeerd wordt. Het is echter makkelijker 
 									gezegd dan gedaan, want achter zo’n proces vinden veel verschillende fases plaats. Het 
 									doordenken van het concept, scenario, gameplay en verhaal is de eerste fase. Daarna 
-									\begint productiefase waarin game content wordt ontworpen met alle personages, locaties, 
+									begint productiefase waarin game content wordt ontworpen met alle personages, locaties, 
 									wereld en interfaces. Uiteindelijk komen we bij development fase waarin de game daadwerkelijk 
 									gebouwd wordt met alle mechanics, data, interactie en processen die binnen de game gebeuren.
 								</p>
