--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 										<ul>
 											<li><a href="index.html">Home</a></li>
 											<li><a href="blogs.html">Blogs</a></li>
+											<li><a href="Adviesrapport.html">Adviesrapport</a></li>
 										</ul>
 									</div>
 								</li>
