--- a/Adviesrapport.html
+++ b/Adviesrapport.html
@@ -37,8 +37,8 @@
 
 							<p>Klik op het plaatje om het verslag te downloaden:<p>
 
-							<a href="C:\Users\janne\iCloudDrive\Macbook Jannes\School (Hogeschool Utrecht)\Jaar 4\Minor ICT\Project\Website ICTea\Adviesrapport ICT Team 2.pdf" download="Adviesrapport Team 2">
-							  <img src="C:\Users\janne\iCloudDrive\Macbook Jannes\School (Hogeschool Utrecht)\Jaar 4\Minor ICT\Project\Website ICTea\Adviesrapportvoor.png" alt="Adviesrapport Shipify" width="230" height="135">
+							<a href="Adviesrapport ICT Team 2.pdf" download="Adviesrapport Team 2">
+							  <img src="Adviesrapportvoor.png" alt="Adviesrapport Shipify" width="230" height="135">
 							</a>
 							
 							<p><b>Adviesrapport ICT Team 2</b></p>
