--- a/Adviesrapport.html
+++ b/Adviesrapport.html
@@ -38,7 +38,7 @@
 							<p>Klik op het plaatje om het verslag te downloaden:<p>
 
 							<a href="Adviesrapport ICT Team 2.pdf" download="Adviesrapport Team 2">
-							  <img src="Adviesrapportvoor.png" alt="Adviesrapport Shipify" width="230" height="135">
+							  <img src="Adviesrapportvoor.PNG" alt="Adviesrapport Shipify" width="230" height="135">
 							</a>
 							
 							<p><b>Adviesrapport ICT Team 2</b></p>
