--- a/Adviesrapport.html
+++ b/Adviesrapport.html
@@ -34,15 +34,15 @@
 							<h2>Adviesrapport</h2>
 						</header>
 						<section class="wrapper style5">
+							<div class="inner"></div>
+								<p>Klik op het plaatje om het verslag te downloaden:<p>
 
-							<p>Klik op het plaatje om het verslag te downloaden:<p>
-
-							<a href="Adviesrapport ICT Team 2.pdf" download="Adviesrapport Team 2">
-							  <img src="Adviesrapportvoor.PNG" alt="Adviesrapport Shipify" width="230" height="135">
-							</a>
+								<a href="Adviesrapport ICT Team 2.pdf" download="Adviesrapport Team 2">
+							 	 <img src="Adviesrapportvoor.png" alt="Adviesrapport Shipify" width="230" height="135">
+								</a>
 							
-							<p><b>Adviesrapport ICT Team 2</b></p>
-
+								<p><b>Adviesrapport ICT Team 2</b></p>
+							</div>
 						</section>
 					</article>
 
